<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="129dp"
            android:layout_height="46dp"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/messageTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintVertical_bias="0.159"/>
    <Button
            android:text="@string/go_to_second"
            android:layout_width="wrap_content"
            android:onClick="onActivityChange"
            android:layout_height="wrap_content"
            android:id="@+id/go_to_second" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/go_to_third"
            app:layout_constraintVertical_bias="0.839"/>

    <Button
            android:text="@string/go_to_third"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:onClick="onActivityChange"
            android:id="@+id/go_to_third" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="356dp"/>
    <TextView
            android:text="@string/main_info"
            android:layout_width="139dp"
            android:layout_height="49dp"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/go_to_third" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.379"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>


</android.support.constraint.ConstraintLayout>