<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

    <include layout="@layout/content_second" tools:layout_editor_absoluteY="0dp"
             android:id="@+id/include" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/second_info"
            android:layout_width="137dp"
            android:layout_height="62dp"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/go_to_third" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.275"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" tools:ignore="HardcodedText"/>
    <Button
            android:text="@string/go_to_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/go_to_third"
            android:onClick="onActivityChange"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="468dp"

            app:layout_constraintBottom_toBottomOf="@+id/include" app:layout_constraintHorizontal_bias="0.77"/>
    <TextView
            android:text=""
            android:layout_width="142dp"
            android:layout_height="58dp" android:id="@+id/messageTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/go_to_main" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintVertical_bias="0.656"/>
    <Button
            android:text="@string/go_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/go_to_main"
            android:onClick="onActivityChange"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="468dp"

            app:layout_constraintBottom_toBottomOf="@+id/include" app:layout_constraintHorizontal_bias="0.118"/>

</android.support.constraint.ConstraintLayout>